# LogAndTrace

./: CMakeLists.txt  LICENSE  Log.bb  LogAndTraceConfig.cmake.in  MULTI_SINK_SUMMARY.md  OPTIMIZATION_PLAN.md  PHASE2_ASYNC_QUEUE_SUMMARY.md  README.md  README.md.backup  README_CN.md  REFACTORING_INNER_LOG.md  SINK_MANAGER_INTEGRATION_ANALYSIS.md  TEST_REPORT.md  memory_config.json
doc/: CONSOLE_OUTPUT_IMPLEMENTATION.md  INDEX.md  OPTIMIZATION_SUMMARY.md  TEST_REPORT.md  TODO.md  logConfig_template.json
doc/archive/: AUTOSAR_Compliance_Analysis.md  BENCHMARK_REPORT.md  DLT_API_DOCUMENTATION.md
doc/design/: MessageCatalog_Format.md  ModeledMessages_Design.md
source/inc/: CCommon.hpp  CConsoleSink.hpp  CDLTSink.hpp  CFileSink.hpp  CLog.hpp  CLogManager.hpp  CLogStream.hpp  CLogger.hpp  CSinkManager.hpp  CSyslogSink.hpp  ISink.hpp
source/src/: CConsoleSink.cpp  CDLTSink.cpp  CFileSink.cpp  CLogManager.cpp  CLogStream.cpp  CLogger.cpp  CSinkManager.cpp  CSyslogSink.cpp
test/: README.md
test/benchmark/: benchmark_latency.cpp  benchmark_memory.cpp  benchmark_multiprocess.cpp  benchmark_simple.cpp  benchmark_stress_test.cpp  benchmark_throughput.cpp
test/examples/: CMakeLists.txt  README.md  config.json  config_all_sinks.json  config_base64_test.json  config_console_file.json  config_dlt.json  config_syslog.json  example_base64_encode.cpp  example_basic_usage.cpp  example_file_rotation.cpp  example_multi_sink.cpp  example_multi_thread.cpp  syslog_example.cpp  test_config_loading.cpp  test_default_config.cpp  test_dlt_direct.cpp  test_dlt_long_message.cpp
test/unittest/: test_base64_encode.cpp  test_boundary_values.cpp  test_log_common.cpp  test_log_manager.cpp  test_logger_stream.cpp  test_main.cpp  test_multi_sink.cpp  test_multi_thread.cpp  test_sink_base.cpp  test_syslog_sink.cpp  test_zero_copy.cpp
tools/: analyze_logs.py  generate_message_catalog.py
